--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,7 +62,7 @@ body {
   }
 }
 
-@layer base {
+/* @layer base {
   * {
     @apply border-border;
   }
@@ -70,3 +70,4 @@ body {
     @apply bg-background text-foreground;
   }
 }
+ */
